backend/tests/golden/queries/positive/01_subquery_in_join/query.sdbl
ВЫБРАТЬ
    К.Наименование,
    П.КоличествоОстаток
ИЗ
    Справочник.Контрагенты КАК К
    ВНУТРЕННЕЕ СОЕДИНЕНИЕ
        (ВЫБРАТЬ
            Контрагент,
            СУММА(Сумма) КАК Сумма
        ИЗ
            РегистрНакопления.Продажи
        СГРУППИРОВАТЬ ПО Контрагент) КАК П
    ПО К.Ссылка = П.Контрагент
