backend/tests/golden/queries/negative/06_inner_join_on_pk/query.sdbl
ВЫБРАТЬ
    Д.Дата,
    К.Наименование
ИЗ
    Документ.АвансовыйОтчет КАК Д
    ВНУТРЕННЕЕ СОЕДИНЕНИЕ Справочник.Контрагенты КАК К
    ПО Д.Контрагент = К.Ссылка
ГДЕ
    Д.Дата МЕЖДУ &НачДата И &КонДата
